force-app/main/default/objects/NameFormattingMasterData__c/NameFormattingMasterData__c.object-meta.xml
<CustomObject>
    <description>สำหรับเก็บข้อมูล Backend value ต่างๆ เช่น Running Number</description>
    <label>Name Formatting Master Data</label>
    <nameField>
        <displayFormat>NFMD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Name Formatting Master Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>