force-app/main/default/objects/NameFormattingMasterData__c/fields/CurrentRunningNumber__c.field-meta.xml
<CustomField>
    <fullName>CurrentRunningNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Current Running number</description>
    <inlineHelpText>Start with 1</inlineHelpText>
    <label>Current Running Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>