force-app/main/default/objects/NameFormattingMasterData__c/fields/DocumentTemplateMappingType__c.field-meta.xml
<CustomField>
    <fullName>DocumentTemplateMappingType__c</fullName>
    <label>Document Template Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>Client Offer</fullName>
            </value>
            <value>
                <fullName>Quotation</fullName>
            </value>
            <value>
                <fullName>Supplementary Agreement</fullName>
            </value>
            <value>
                <fullName>Payment Summary</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Payment Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>