force-app/main/default/objects/NameFormattingMasterData__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <inlineHelpText>Please add when a type of record is &apos;running number&apos;</inlineHelpText>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>ClientOffer__c</fullName>
            </value>
            <value>
                <fullName>Quote__c</fullName>
            </value>
            <value>
                <fullName>Invoice__c</fullName>
            </value>
            <value>
                <fullName>PaymentReceipt__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>