force-app/main/default/objects/NameFormattingMasterData__c/fields/RunningFormat__c.field-meta.xml
<CustomField>
    <fullName>RunningFormat__c</fullName>
    <description>store format of each running key</description>
    <label>Running Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>