force-app/main/default/objects/NameFormattingMasterData__c/fields/RunningKey__c.field-meta.xml
<CustomField>
    <fullName>RunningKey__c</fullName>
    <description>Key for running number use in back-end</description>
    <label>Running Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>