force-app/main/default/objects/NameFormattingMasterData__c/listViews/Running_Format.listView-meta.xml
<ListView>
    <fullName>Running_Format</fullName>
    <columns>NAME</columns>
    <columns>RunningKey__c</columns>
    <columns>RunningFormat__c</columns>
    <columns>DocumentTemplateMappingType__c</columns>
    <columns>ObjectName__c</columns>
    <columns>RunningPurpose__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Running Format</label>
</ListView>